--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -20,6 +20,11 @@
     <fragment
         android:id="@+id/nav_contct"
         android:name="com.example.firstapp.ui.slideshow.SlideshowFragment"
-        android:label="@string/name_comtact"
+        android:label="@string/name_contact"
         tools:layout="@layout/fragment_contact" />
+    <fragment
+        android:id="@+id/addcontactsFragment"
+        android:name="com.example.firstapp.ui.addcontacts.AddcontactsFragment"
+        android:label="fragment_addcontacts"
+        tools:layout="@layout/fragment_addcontacts" />
 </navigation>
