--- a/app/src/main/res/layout/fragment_addcontacts.xml
+++ b/app/src/main/res/layout/fragment_addcontacts.xml
@@ -1,19 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/addname"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.addcontacts.AddcontactsFragment">
 
-    <android.support.design.widget.TextInputLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
+
+        <Button
+            android:id="@+id/Add"
+            android:layout_width="156dp"
+            android:layout_height="42dp"
+            android:text="@string/Add"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.425" />
 
         <android.support.design.widget.TextInputEditText
-            android:id="@+id/addcontact"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/add_name" />
-    </android.support.design.widget.TextInputLayout>
+            android:id="@+id/addcontacts"
+            android:layout_width="320dp"
+            android:layout_height="26dp"
+            android:hint="@string/add_name"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.347"
+            tools:layout_editor_absoluteX="55dp" />
+
+    </android.support.constraint.ConstraintLayout>
+
 </FrameLayout>
