--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -18,13 +18,13 @@
         tools:layout="@layout/fragment_aboutme" />
 
     <fragment
-        android:id="@+id/nav_contct"
+        android:id="@+id/nav_contact"
         android:name="com.example.firstapp.ui.slideshow.SlideshowFragment"
         android:label="@string/name_contact"
         tools:layout="@layout/fragment_contact" />
     <fragment
-        android:id="@+id/addcontactsFragment"
+        android:id="@+id/nav_addcontacts"
         android:name="com.example.firstapp.ui.addcontacts.AddcontactsFragment"
-        android:label="fragment_addcontacts"
+        android:label="@string/add_contacts"
         tools:layout="@layout/fragment_addcontacts" />
 </navigation>
